# botdylan

./: .gitignore  CMakeLists.txt  README.md  commands.txt  config.rviz  package.xml  setup.cfg  setup.py  trajectory.py
botdylan/: FretPos.py  GeneratorNode.py  GuitarChain.py  KinematicChain.py  calc_fret_pos.py  chords.py  fretboard.py  guitar_pos  plotdata.py  test.py  trajectory  trajectory.py
code/: GeneratorNode  KinematicChain  test.py  trajectory
hand/robots/: sr_hand_bimanual.urdf
hand/xacro/finger/distal/: distal.urdf.xacro
hand/xacro/finger/knuckle/: knuckle.urdf.xacro
hand/xacro/finger/lfmetacarpal/: lfmetacarpal.urdf.xacro
hand/xacro/finger/middle/: middle.urdf.xacro  middle_and_distal_bt_2p.urdf.xacro
hand/xacro/finger/proximal/: proximal.urdf.xacro
hand/xacro/forearm/: forearm_c.urdf.xacro  forearm_e.urdf.xacro  forearm_g.urdf.xacro
hand/xacro/palm/: palm_e.urdf.xacro  palm_g.urdf.xacro
hand/xacro/thumb/: thdistal.urdf.xacro  thmiddle.urdf.xacro  thproximal.urdf.xacro
hand/xacro/wrist/: wrist.urdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/botdylan/lib/botdylan/: trajectory
install/botdylan/share/botdylan/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/botdylan/share/botdylan/launch/: botdylan.launch.py
install/botdylan/share/botdylan/rviz/: camilo.rviz  kenadi.rviz  trey.rviz  viewurdfplus.rviz
install/botdylan/share/botdylan/urdf/: guitar.urdf  sr_hand_bimanual.urdf
launch/: botdylan.launch.py  nopython.launch.py
log/: latest_build
me133a-guitar-robot/: TransformHelpers
robots/: sr_hand.urdf
rviz/: camilo.rviz  kenadi.rviz  trey.rviz  urdf.rviz  viewbotdylan.rviz  viewurdfplus.rviz
urdf/: guitar.urdf  sr_hand_bimanual.urdf
